this is the completed homework

--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,60 @@
-c
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <style>
+        .main{
+          color: darkorange;
+          text-align: center;
+        }
+        body{
+          background-color: lightgray;
+        }
+        .orange{
+          color: darkorange;
+        }
+        .icon{
+            height: 50px;
+            width: 50px;
+        }
+        .space{
+            margin-left: 70px;
+            margin-right: 70px;
+        }
+    </style>
+    <title>Joaquin Rangel</title>
+    </head>
+<body>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <h1 class="main">Joaquin Rangel</h1>
+            </div>
+        </div>
+    </div> 
+        <nav class="navbar navbar-dark bg-dark">
+    <div class="container">
+      <a class="navbar-brand" href="index.html">About</a>
+      <a class="navbar-brand" href="portofolio.html">Portfolio</a>
+      <a class="navbar-brand" href="contact.html">Contact</a>
+    </div>
+  </nav>
+  <br>
+  <div class="jumbotron space">
+    <div class="col text-center">
+    <h1 class="display-4">Contact me</h1>
+    </div>
+        <div class="col text-center">
+            <img class="icon" src="https://cdn2.iconfinder.com/data/icons/font-awesome/1792/phone-512.png">
+        </div>
+        <div class="col text-center">
+    <p class="lead">Joaquin Rangel: (786)-488-3095.</p>
+    <p class="lead">Email: joaquinrangel97@gmail.com / jarm328@gmail.com</p>
+    </div>
+    <hr class="my-4">
+  </div>
+
+  </body>
+</html>
